@@ -4,6 +4,7 @@ ChangeLog
  + 21Apr2015 Add check for MPI_Comm_spawn
              Add omp_get_thread_num default to 0 and message in Extrae
              Automatically detect the system type to enable/disable openmp runtimes
+             Rebirth IBM xlsmp instrumentation (requires further testing)
  + 20Apr2015 --with-libgomp supports auto to determine the appropriate version from CC
              Add OpenMP task-based statistics (instantiated, executed)
              Add OMPT dependencies (MB project)
